0.10.0 (2014-MM-DD)

	* x0d: Adds req.accept_language(string[] supportedLanguages);
	* x0d: Adds SIGTTIN/SIGTTOU signal handling for incrementing/decrementing log level
	* x0d: Fixes to req.header(S)S and req.cookie(S)S signatures
	* http: fixes to request path decoding
	* flow: fixes crash on empty arrays
	* flow: allow parsing function call args in expressions without round braces.
	* director: support different modes how to react on early client aborts.
	* accesslog: support custom log format lines
	* accesslog: support logging into multiple log targets
	* status: adds a `status.api()` handler that generates a JSON formatted server status response

0.9.0 (2014-04-13)

	* flow: support builtin handler/function overloading.
	* flow: support array assignments to variables.
	* flow: improved internal constant value handling.
	* flow: improved array handling, also resulting into runtime performance boosts and better semantic verifications.
	* flow: implements direct threaded interpreter loop (enabled by default).
	* flow: dropped superfluous opcodes
	* flow: added optimization pass: dead code elimination
	* flow: added optimization pass: constant condition folding
	* flow: added optimization pass: superfluous branch-to-exit folding
	* flow: optimizations are now enabled by default
	* flow: added support for unary bit-wise NOT operator
	* flow: fixes to all boolean operators
	* flow: fixes use of large integer constants in expressions
	* flow: builtin callee user-verification uses (optimized) IR instead of AST now.
	* flow: Fixes "superfluous params" error message.
	* x0d: builtin workers() is now overloaded for workers(I)V and workers(i)V; no workers.affinity(i)V anymore.
	* x0d: memory resource leak fixes upon program exit.
	* x0d: adds sleep() shared function
	* x0d: Fixed precompressed() handler.
	* plugins: new plugin "access" for basic IP & CIDR network based access control.