@@ -3,6 +3,7 @@
 	* x0d: Adds req.accept_language(string[] supportedLanguages);
 	* x0d: Adds SIGTTIN/SIGTTOU signal handling for incrementing/decrementing log level
 	* x0d: Fixes to req.header(S)S and req.cookie(S)S signatures
+	* x0d: redirect() and respond() have been both redesigned and renamed into return() to be more familiar with nginx configuration
 	* http: fixes to request path decoding
 	* flow: fixes crash on empty arrays
 	* flow: allow parsing function call args in expressions without round braces.
